Fix project item layout bug

--- a/src/sass/components/career.sass
+++ b/src/sass/components/career.sass
@@ -4,7 +4,6 @@
 	&__projects
 		display: flex
 		flex-wrap: wrap
-		align-items: flex-start
 		@include print-corrected(margin, $bottom:50px)
 
 	// career__education block
